--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<ol>
 		<li>Cover bottom of a cast iron skillet with oil and set to medium high heat.  While heating, combine flour, salt, onion powder, and garlic powder
 			in a bowl and coat pork with mixture.</li>
-		<li>Once oil is hot, arrange pork in a single layer and fry till brown.  Use tongs to turn pieces and get as much Maillard reaction as possible on all
+		<li>Once oil is hot, arrange pork in a single layer and fry until brown.  Use tongs to turn pieces and get as much Maillard reaction as possible on all
 			sides.  Do not overcrowd pan, work in multiple batches if necessary.</li>
 		<li>Set pork aside, drain off excessive oil from pan, and use remainder to sweat onions with a few pinches of salt.  Add garlic after a few minutes.</li>
 		<li>Combine stock, tomatoes, chilis, pork, onion, and garlic in a pot and cook until pork is tender.  Salt to taste.</li>
